--- a/app/views/startups/_form.html.erb
+++ b/app/views/startups/_form.html.erb
@@ -43,7 +43,7 @@
 
 
   <div>
-    <input class="purple-button" type="submit" value="create new startup">
+    <input class="purple-button" type="submit" value="create new startup"></input>
   </div>
 
 <!-- <% end %> -->
