--- a/app/views/page/index.html.erb
+++ b/app/views/page/index.html.erb
@@ -4,8 +4,8 @@
 
 		<div class="col-xs-12 col-md-3 hidden" id="sidebar">
 
-			<h2 id="title">SoFla StartUp Ecosystem</h2>
-			<p class="lead">Information about South Florida Startups, Investors and all components of the ecosystem. Select bellow the information to show and then locate in the map to access the details..</p>
+			<h2 id="title">South Florida StartUp Ecosystem</h2>
+			<p class="lead">The most comprehensive database of South Florida's startups and investors ecosystem. Select from the categories below and locate in the map for more details.</p>
 			<div id="accordion" role="tablist" aria-multiselectable="true">
 				<div class="panel panel-default">
 					<div class="panel-heading" role="tab" id="headingOne">
@@ -16,7 +16,7 @@
 						</h4>
 					</div>
 					<div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
-						<% ["All entities","Investor", "StartUp"].each do |entity| %>
+						<% ["All","Investor", "StartUp"].each do |entity| %>
 						<input type="checkbox" data-category="entity" name="<%= entity %>" id="<%= entity%>" value="<%= entity %>" class="js-filter-box">
 						<label for="<%= entity %>"> <%= entity %> </label> <br>
 						<% end %>
@@ -87,15 +87,18 @@
 			</div>
 		</form>
 
-
-		<div id="search">
+		<!--Searchbox-->
+		<div>
 			<h1>Search</h1>
-			<%= form_tag("/search", method: "get") do %>
-			<%= search_field_tag :term %>
-			<%= submit_tag "Go!" %>
-			<% end %>
-			<%= params[:term] %>
+			<div class="input-group">
+				<%= form_tag("/search", method: "get") do %>
+				<%= search_field_tag :term %>
+				<%= submit_tag "Go!" %>
+				<% end %>
+				<%= params[:term] %>
+			</div>
 		</div>
+
 	</div>
 
 
