--- a/app/views/startups/index.html.erb
+++ b/app/views/startups/index.html.erb
@@ -1,5 +1,5 @@
 <div class="row space">
-  <div class="col-xs-12 white-font table-border">
+  <div class="col-xs-12 white-font table-bg">
     <p id="notice"><%= notice %></p>
 
     <h1> List of Startups in South Florida </h1>
