added styles to show pages and worked on ajax call

--- a/app/assets/stylesheets/investor.scss
+++ b/app/assets/stylesheets/investor.scss
@@ -21,7 +21,7 @@
   background-color: transparent !important;
 	color: #5b04ff !important;
   border: 2px solid #5b04ff !important;
-  text-align: center!important;
+  text-align: left;
   text-decoration: none !important;
   display: inline-block !important;
 	font-size: 1.2em !important;
@@ -55,7 +55,7 @@ b, strong {
   font-weight: 300;
 }
 
-p {
-  font-family: 'Roboto', sans-serif !important;
-  font-size: 1.5em;
-}
+// p {
+//   font-family: 'Roboto', sans-serif !important;
+//   font-size: 1.5em;
+// }
