--- a/app/views/investors/_form.html.erb
+++ b/app/views/investors/_form.html.erb
@@ -41,7 +41,7 @@
     <%= f.date_field(:founded_date, class:"form-control") %>
   </div>
 
-  <div>
+  <div class="btn-right">
     <input class="purple-button" type="submit" value="create new investor">
   </div>
 <% end %>
