--- a/app/views/investors/new.html.erb
+++ b/app/views/investors/new.html.erb
@@ -4,6 +4,6 @@
 
   <%= render 'form', investor: @investor %>
 
-  <%= link_to 'Back', investors_path %>
+  <%= link_to 'Back', investors_path, class: "purple-button" %>
   </div>
 </div>
