--- a/app/views/startups/edit.html.erb
+++ b/app/views/startups/edit.html.erb
@@ -1,6 +1,10 @@
-<h1>Editing Startup</h1>
+<div class="row">
+  <div class="col-md-offset-4 col-sm-12 col-md-4 form-style new-startup-form">
+    <h1>Editing Startup</h1>
 
-<%= render 'form', startup: @startup %>
+    <%= render 'form', startup: @startup %>
 
-<%= link_to 'Show', @startup %> |
-<%= link_to 'Back', startups_path %>
+    <%= link_to 'Show', @startup %> |
+    <%= link_to 'Back', startups_path %>
+  </div>
+</div>
