--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -17,7 +17,10 @@ html, body, main, #main-container, #page-index-row, #map-data, #map-canvas { hei
 
 
 html body {
- 	background: #000 url("http://i.imgur.com/mcOvzZn.jpg") no-repeat center center fixed;
+ 	background-image: url("http://i.imgur.com/mcOvzZn.jpg");
+  background-attachment: fixed;
+  background-size: cover;
+  background-position: center center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -63,17 +66,23 @@ ul.nav li.nav-links a:hover {
 	color: #5b04ff;
   border: 2px solid #5b04ff;
   text-align: center;
-  text-decoration: none;
+  text-decoration: none !important;
   display: inline-block;
 	font-size: 1.2em;
 	padding: 10px 20px;
 	letter-spacing: 1px;
-	margin: 8px;
+	/*margin: 8px;*/
   border-radius: 20px;
+  margin: 10px 20px;
 }
 
 .purple-button:visited {
   background-color: transparent !important;
+  color: #5b04ff;
+}
+
+.btn-right {
+  float: right;
 }
 
 .white-font {
@@ -91,7 +100,20 @@ ul.nav li.nav-links a:hover {
 
 .profile {
   background-color: rgba(0, 0, 0, 0.7);
+  padding: 5%;
 }
+
+.profile-column {
+  border: 1px solid #666699;
+  border-radius: 10px;
+  height: 400px;
+  padding: 30px;
+}
+
+.img {
+  margin: 0 auto;
+}
+
 
 footer {
   background-color: black;
