--- a/app/views/investors/edit.html.erb
+++ b/app/views/investors/edit.html.erb
@@ -1,6 +1,10 @@
-<h1>Editing Investor</h1>
+<div class="row">
+  <div class="col-md-offset-4 col-sm-12 col-md-4 form-style new-startup-form">
+    <h1>Editing Investor</h1>
 
-<%= render 'form', investor: @investor %>
+    <%= render 'form', investor: @investor %>
 
-<%= link_to 'Show', @investor %> |
-<%= link_to 'Back', investors_path %>
+    <%= link_to 'Show', @investor %> |
+    <%= link_to 'Back', investors_path %>
+  </div>
+</div>
