--- a/app/views/startups/_form.html.erb
+++ b/app/views/startups/_form.html.erb
@@ -44,7 +44,7 @@
   </div>
 
 
-  <div>
+  <div class="btn-right">
     <input class="purple-button" type="submit" value="create new startup"></input>
   </div>
 
