styled form pages, fixed alignment issues, styled show pages

--- a/app/assets/stylesheets/page.scss
+++ b/app/assets/stylesheets/page.scss
@@ -2,8 +2,9 @@
 
 #title {
 	color: #5b04ff !important;
-	font-size: 3em;
+	font-size: 3.3em;
 	text-align: center;
+	font-family: 'Permanent Marker', cursive;
 }
 
 p {
