--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,300' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Permanent+Marker' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
 
@@ -131,11 +132,11 @@
       </div>
     </main>
 
-    <footer>
+    <footer class="footer">
       <div class="container-fluid">
         <div class="row">
           <div class="col-sm-12">
-            <!-- <p>A project by <a href="#">Victoria Cartagena, N. Alejandra Estevez, Andres Duarte</a>.</p> -->
+            <p>A project by <a href="#">Victoria Cartagena, N. Alejandra Estevez, Andres Duarte</a>.</p>
           </div>
         </div>
       </div>
