--- a/app/views/startups/edit.html.erb
+++ b/app/views/startups/edit.html.erb
@@ -4,7 +4,7 @@
 
     <%= render 'form', startup: @startup %>
 
-    <%= link_to 'Show', @startup %> |
-    <%= link_to 'Back', startups_path %>
+    <!-- <%= link_to 'Show', @startup %> |
+    <%= link_to 'Back', startups_path %> -->
   </div>
 </div>
