--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,6 +1,10 @@
-<h1>Editing User</h1>
+<div class="row">
+  <div class="col-xs-12 semi-transparent">
+    <h1>Editing User</h1>
 
-<%= render 'form', user: @user %>
+    <%= render 'form', user: @user %>
 
-<%= link_to 'Show', @user %> |
-<%= link_to 'Back', users_path %>
+    <!-- <%= link_to 'Show', @user, class: "purple-button" %>
+    <%= link_to 'Back', users_path, class: "purple-button" %> -->
+  </div>
+</div>
