--- a/app/views/users/admin_panel.html.erb
+++ b/app/views/users/admin_panel.html.erb
@@ -1,23 +1,23 @@
 <div class="row space">
   <div class="col-xs-12 white-font table-border">
 
-    <div>
-      <h3 class="approve-investors"> List of investors to be approved: </h3>
+    <h3 class="approve-investors"> List of investors to be approved: </h3>
       <table class="table">
-        <tr>
-          <th class="admin-page-fields">Name &nbsp&nbsp&nbsp&nbsp</th>
-          <th class="admin-page-fields">Email &nbsp&nbsp&nbsp&nbsp</th>
-          <th class="admin-page-fields">Website&nbsp&nbsp&nbsp&nbsp</th>
-          <th class="admin-page-fields">Address&nbsp&nbsp&nbsp&nbsp</th>
-          <th class="admin-page-fields">Description&nbsp&nbsp&nbsp&nbsp&nbsp</th>
-          <th class="admin-page-fields">Founded Date&nbsp&nbsp&nbsp&nbsp</th>
-          <th colspan="1"></th>
-          <th colspan="1"></th>
-        </tr>
+        <thead>
+          <tr>
+            <th class="admin-page-fields">Name</th>
+            <th class="admin-page-fields">Email</th>
+            <th class="admin-page-fields">Website</th>
+            <th class="admin-page-fields">Address</th>
+            <th class="admin-page-fields">Description</th>
+            <th class="admin-page-fields">Founded Date</th>
+            <th colspan="1"></th>
+            <th colspan="1"></th>
+          </tr>
+        </thead>
 
-        <tbody
+        <tbody>
           <% @investors.each do |investor| %>
-
           <tr>
             <td class="admin-page-fields"><%= investor.name %></td>
             <td class="admin-page-fields"><%= investor.email %></td>
@@ -31,13 +31,15 @@
           </tr>
           <%end%>
         </tbody>
-      </table>
+    </table>
+  </div>
+</div>
 
-      <!-- Add buttons for approval -->
-
-      <div>
-        <h3 class="approve-startups"> List of startups to be approved: </h3>
-        <table class="table">
+<div class="row space">
+  <div class="col-xs-12 white-font table-border">
+    <h3 class="approve-startups"> List of startups to be approved: </h3>
+      <table class="table">
+        <thead>
           <tr>
             <th class="admin-page-fields">Name</th>
             <th class="admin-page-fields">Email</th>
@@ -48,51 +50,51 @@
             <th colspan="1"></th>
             <th colspan="1"></th>
           </tr>
-          <tbody>
+        </thead>
+        <tbody>
+          <% @startups.each do |startup| %>
+          <tr>
+            <td class="admin-page-fields"><%= startup.name %></td>
+            <td class="admin-page-fields"><%= startup.email %></td>
+            <td class="admin-page-fields"><%= startup.website %></td>
+            <td class="admin-page-fields"><%= startup.address %></td>
+            <td class="admin-page-fields"><%= startup.description %></td>
+            <td class="admin-page-fields"><%= startup.founded_date %></td>
+            <td><%= button_to 'Edit', edit_startup_path(startup), method: 'get' %></td>
+            <td><%= button_to 'Approve', startup_approve_path(startup), method:'patch' %></td>
+            <td><%= button_to 'Delete', startup_path(startup), method:'delete' %></td>
+          </tr>
+          <%end%>
+        </tbody>
+      </table>
+  </div>
+</div>
 
-            <% @startups.each do |startup| %>
-
-            <tr>
-              <td class="admin-page-fields"><%= startup.name %></td>
-              <td class="admin-page-fields"><%= startup.email %></td>
-              <td class="admin-page-fields"><%= startup.website %></td>
-              <td class="admin-page-fields"><%= startup.address %></td>
-              <td class="admin-page-fields"><%= startup.description %></td>
-              <td class="admin-page-fields"><%= startup.founded_date %></td>
-              <td><%= button_to 'Edit', edit_startup_path(startup), method: 'get' %></td>
-              <td><%= button_to 'Approve', startup_approve_path(startup), method:'patch' %></td>
-              <td><%= button_to 'Delete', startup_path(startup), method:'delete' %></td>
-            </tr>
-            <%end%>
-          </tbody>
-        </table>
-
-        <div>
-          <h3 class="approve-users"> List of users to be approved: </h3>
-          <table class="table">
-            <tr>
-              <th class="admin-page-fields">Name</th>
-              <th class="admin-page-fields">Email</th>
-              <th colspan="1"></th>
-              <th colspan="1"></th>
-              <th colspan="1"></th>
-              <th colspan="1"></th>
-            </tr>
-            <tbody>
-
-              <% @users.each do |user| %>
-
-              <tr>
-                <td class="admin-page-fields"><%= user.name %></td>
-                <td class="admin-page-fields"><%= user.email %></td>
-                <td><%= button_to 'Edit', edit_user_path(user), method: 'get' %></td>
-                <td><%= button_to 'Approve', user_approve_path(user), method:'patch' %></td>
-                <td><%= button_to 'Delete', user_path(user), method:'delete' %></td>
-              </tr>
-              <%end%>
-            </tbody>
-          </table>
-        </div>
-      </div>
-
-  <!-- Add buttons for approval -->
+<div class="row space">
+  <div class="col-xs-12 white-font table-border">
+    <h3 class="approve-users"> List of users to be approved: </h3>
+      <table class="table">
+        <thead>
+          <tr>
+            <th class="admin-page-fields">Name</th>
+            <th class="admin-page-fields">Email</th>
+            <th colspan="1"></th>
+            <th colspan="1"></th>
+            <th colspan="1"></th>
+            <th colspan="1"></th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @users.each do |user| %>
+          <tr>
+            <td class="admin-page-fields"><%= user.name %></td>
+            <td class="admin-page-fields"><%= user.email %></td>
+            <td><%= button_to 'Edit', edit_user_path(user), method: 'get' %></td>
+            <td><%= button_to 'Approve', user_approve_path(user), method:'patch' %></td>
+            <td><%= button_to 'Delete', user_path(user), method:'delete' %></td>
+          </tr>
+          <%end%>
+        </tbody>
+      </table>
+  </div>
+</div>
