--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,12 +1,12 @@
 <div class="row">
   <div class="col-xs-12 col-md-4 col-md-offset-4 semi-transparent">
 
-      <p class="white-font">
+      <p class="white-font txt-center">
         <strong>Name:</strong>
         <%= @user.name %>
       </p>
 
-      <p class="white-font">
+      <p class="white-font txt-center">
         <strong>Email:</strong>
         <%= @user.email %>
       </p>
