added pagination to startups

--- a/app/views/startups/index.html.erb
+++ b/app/views/startups/index.html.erb
@@ -3,6 +3,7 @@
     <p id="notice"><%= notice %></p>
 
     <h1> List of Startups in South Florida </h1>
+    <%= will_paginate @startups %>
 
     <table class="table">
       <thead>
