added pagination to investors

--- a/app/views/investors/index.html.erb
+++ b/app/views/investors/index.html.erb
@@ -3,7 +3,7 @@
     <p id="notice"><%= notice %></p>
 
     <h1> List of Investors in South Florida</h1>
-
+  <%= will_paginate @investors %>
     <table class="table">
       <thead>
         <tr>
