added social media images

--- a/app/views/investors/show.html.erb
+++ b/app/views/investors/show.html.erb
@@ -55,9 +55,11 @@
         <hr>
         <div class="row">
         <div class="col-xs-12 extra">
-          <img class="smedia" src="facebook.jpg" alt="facebook"/>
-          <img class="smedia" src="twitter.jpg" alt="twitter"/>
-          <img class="smedia" src="linkedin.png" alt="linkedin" width="30" height="30" />
+          <ul>
+            <li><%= image_tag("facebook.png", class: "smedia img-responsive") %></li>
+            <li><%= image_tag("twitter.png", class: "smedia img-responsive") %></li>
+            <li><%= image_tag("linkedin.png", class: "smedia img-responsive") %></li>
+          </ul>
         </div>
         </div>
 
