--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -58,7 +58,7 @@
           </div>
         </nav>
 
-
+        <%= flash[:error] %>
 
       <!-- modal for register/login-->
       <div class="modal fade" id="reg-login-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
@@ -132,18 +132,9 @@
       </div>
     </main>
 
-    <footer class="footer">
-      <div class="container-fluid">
-        <div class="row">
-          <div class="col-sm-12">
-            <p>A project by <a href="#">Victoria Cartagena, N. Alejandra Estevez, Andres Duarte</a>.</p>
-          </div>
-        </div>
-      </div>
-    </footer>
-
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=<%= ENV['MAPKEY'] %>&callback=initMap"
     async defer></script>
+
   </body>
 </html>
