--- a/app/views/page/index.html.erb
+++ b/app/views/page/index.html.erb
@@ -88,7 +88,7 @@
 	</form>
 
 		<!--Searchbox-->
-		<div>
+		<!-- <div>
 			<hr>
 			<div class="input-group">
 				<%= form_tag("/search", method: "get") do %>
@@ -97,7 +97,7 @@
 				<% end %>
 				<%= params[:term] %>
 			</div>
-		</div>
+		</div> -->
 
 	</div>
 
