fixed admin to confirm emails

--- a/app/views/user_mailer/admin_confirmation.html.erb
+++ b/app/views/user_mailer/admin_confirmation.html.erb
@@ -2,4 +2,4 @@
 
 <p> Someone just signed up, please login for approval. </p>
 
-<%= link_to root_path %>
+<%= link_to("User to be approve", miami-made.herokuapp.com) %>
