undo admin email confirmation

--- a/app/views/user_mailer/admin_confirmation.html.erb
+++ b/app/views/user_mailer/admin_confirmation.html.erb
@@ -1,5 +1,5 @@
-<p> Hi <%= @user.name %>,</p>
+<!-- <p> Hi <%= @user.name %>,</p>
 
 <p> Someone just signed up, please login for approval. </p>
 
-<%= link_to("User to be approve", miami-made.herokuapp.com) %>
+<%= link_to("User to be approve", miami-made.herokuapp.com) %> -->
